[Stories] fix responsive spacing, add responsive tables

--- a/public/scss/base/_globals.scss
+++ b/public/scss/base/_globals.scss
@@ -56,18 +56,17 @@ hr {
   border-top: 1px solid $color-neutral-500;
 }
 
+.table-responsive {
+  width: 100%;
+  overflow-x: auto;
+}
+
 table {
   width: 100%;
   vertical-align: top;
   border-color: $color-divider;
   border-collapse: collapse;
   margin-block-end: 1em;
-  
-  > p {
-    font-style: italic;
-    font-size: 0.875em;
-    text-align: center;
-  }
 }
 
 thead {
