--- a/public/scss/base/_grid.scss
+++ b/public/scss/base/_grid.scss
@@ -29,6 +29,15 @@
   }
 }
 
+.grid-cols-2 {
+  display: grid;
+  grid-template-columns: minmax(0, 1fr);
+
+  @include breakpoint(sm) {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
 .col-span-3 {
   grid-column: span 3 / span 3;
 }
